src/objects/Product_Split__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Percentages_Sum__c</fullName>
        <label>Percentages Sum</label>
        <summarizedField>Split__c.Percentage__c</summarizedField>
        <summaryForeignKey>Split__c.Product_Split__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Charge__c</fullName>
        <label>Product Rate Plan Charge</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>zqu__ProductRatePlanCharge__c.zqu__Deleted__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Product Splits</relationshipLabel>
        <relationshipName>Product_Splits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Product Split</label>
    <nameField>
        <displayFormat>CH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Splits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>Active_product_splits</fullName>
        <columns>NAME</columns>
        <columns>Product_Rate_Plan_Charge__c</columns>
        <columns>Percentages_Sum__c</columns>
        <columns>Active__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active product splits</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Rate_Plan_Charge__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_product_splits_active_and_inactive</fullName>
        <columns>NAME</columns>
        <columns>Product_Rate_Plan_Charge__c</columns>
        <columns>Percentages_Sum__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All product splits active and inactive</label>
    </listViews>
    <validationRules>
        <fullName>Splits_sum_to_100_percent_on_active</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Active__c,  Percentages_Sum__c  &lt;&gt; 1)</errorConditionFormula>
        <errorDisplayField>Active__c</errorDisplayField>
        <errorMessage>To make a Product Split active, splits must add up to 100%</errorMessage>
    </validationRules>
</CustomObject>